src/sql/snapshots/mantis__sql__ddl__tests__snapshot_tests__create_materialized_view_postgres.snap
---
source: src/sql/ddl.rs
assertion_line: 1696
expression: sql
---
CREATE MATERIALIZED VIEW "user_summary" AS SELECT
  "id",
  "name"
FROM "users"
