src/sql/snapshots/mantis__sql__ddl__tests__snapshot_tests__create_or_replace_view_postgres.snap
---
source: src/sql/ddl.rs
assertion_line: 1672
expression: sql
---
CREATE OR REPLACE VIEW "active_users" AS SELECT
  "id",
  "name"
FROM "users"
