src/sql/snapshots/mantis__sql__ddl__tests__snapshot_tests__create_view_basic_tsql.snap
---
source: src/sql/ddl.rs
assertion_line: 1660
expression: sql
---
CREATE VIEW [active_users] AS SELECT
  [id],
  [name]
FROM [users]
