src/sql/snapshots/mantis__sql__ddl__tests__snapshot_tests__create_view_if_not_exists_duckdb.snap
---
source: src/sql/ddl.rs
assertion_line: 1684
expression: sql
---
CREATE VIEW IF NOT EXISTS "active_users" AS SELECT
  "id",
  "name"
FROM "users"
