src/sql/snapshots/mantis__sql__ddl__tests__snapshot_tests__create_view_with_columns_postgres.snap
---
source: src/sql/ddl.rs
assertion_line: 1720
expression: sql
---
CREATE VIEW "user_view" ("user_id", "user_name") AS SELECT
  "id",
  "name"
FROM "users"
