src/sql/snapshots/mantis__sql__ddl__tests__snapshot_tests__create_view_with_schema_postgres.snap
---
source: src/sql/ddl.rs
assertion_line: 1708
expression: sql
---
CREATE VIEW "analytics"."active_users" AS SELECT
  "id",
  "name"
FROM "users"
