src/sql/snapshots/mantis__sql__ddl__tests__snapshot_tests__drop_materialized_view_postgres.snap
---
source: src/sql/ddl.rs
assertion_line: 1767
expression: sql
---
DROP MATERIALIZED VIEW IF EXISTS "user_summary"
