src/sql/snapshots/mantis__sql__ddl__tests__snapshot_tests__drop_view_if_exists_postgres.snap
---
source: src/sql/ddl.rs
assertion_line: 1747
expression: sql
---
DROP VIEW IF EXISTS "active_users"
