src/sql/snapshots/mantis__sql__ddl__tests__snapshot_tests__truncate_with_schema_postgres.snap
---
source: src/sql/ddl.rs
assertion_line: 1619
expression: sql
---
TRUNCATE TABLE "analytics"."users"
